# pendulum

./: CMakeLists.txt  LICENSE  README.md
include/: game.h  pendulum.h  pendulum2.h
include/objects/: circle.h  line.h  point.h
include/pendulums/: double-pendulum.h  pendulum.h
include/text/: SDL_FontCache.h  info.h
src/: game.cpp  main.cpp  pendulum.cpp  pendulum2.cpp
src/objects/: circle.cpp  line.cpp  point.cpp
src/pendulums/: double-pendulum.cpp  pendulum.cpp
src/text/: SDL_FontCache.cpp  info.cpp
